--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ h5 {font: var(--h5);}
 .p2 {font: var(--p2); }
 p {font: var(--p); }
 li{list-style: none;}
-a{text-decoration: none}
 html {
     scroll-behavior: smooth;
 }
@@ -70,6 +69,7 @@ html {
 .icon-tecnologias{
     min-height: 36px;
     min-width: 36px;
+    
 }
 
 .boton-mail-v1{
@@ -77,6 +77,7 @@ html {
     font: var(--links);
     background-color: var(--colorprimario-mc);
     border: solid 1px var(--colorresaltar-mc);
+    box-shadow: 1px 0.5px 5px var(--colorprimario-mc);
     border-radius: 8px;
     width: 236px;
     height: 34px;
@@ -99,6 +100,7 @@ html {
     background-color: var(--colorresaltar-mc);
     border: solid 1px var(--colorresaltar-mc);
     border-radius: 8px;
+    box-shadow: 1px 0.5px 15px var(--colorresaltar-mc);
     width: 236px;
     height: 34px;
     display: flex;  
@@ -158,7 +160,33 @@ html {
     gap: 16px;
     margin-top: 18px;
     padding: 8px;
+    transition: var(--transition);
 }
+.tecnologias svg:hover{
+    animation: mover-arriba;
+    animation-duration: 600ms;
+    animation-timing-function:ease-in-out;
+    transition: var(--transition);
+    fill: var(--colorsecundario-mc);
+}
+
+@keyframes mover-arriba {
+    0%{
+        transform:translateY(0px)
+    }
+
+    50%{
+        transform:translateY(-3px)
+    }
+
+    100%{
+        transform:translateY(0px)
+    }
+}
+
+
+
+
 /* Carta para presentar proyectos */
 .carta-proyecto{
     background-color: var(--colorresaltar-mc);
@@ -197,16 +225,46 @@ body{
     padding: 0;
     margin: 0 auto;
 }
+section{
+    animation: revelar linear both;
+    animation-timeline: view();
+    animation-range: entry 10% cover 20%;
+}
+@keyframes revelar{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1; 
+    }
+}
 
 /* Header */
 header{
-    
+    top: 0;
+    position: sticky;
+    z-index: 1;
     background-color: var(--colorresaltar-mc);
     flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 60px;
+
+    animation: difuminador-header linear both;
+    animation-timeline: scroll(root);
+    animation-range: 0 100vh;
+}
+@keyframes difuminador-header {
+    0%{  
+        background-color: var(--colorresaltar-mc);
+        opacity: 100%;
+        backdrop-filter: blur(10px);
+    } 
+    100%{
+        backdrop-filter: blur(100px);
+        opacity: 98%;
+    }  
 }
 nav{
     display: flex;
@@ -216,20 +274,42 @@ nav{
     height: 60px;
     width: 100%;
 }
+
+
+
+
+a{
+    text-decoration: none
+}
+
 .redireccion-menu{
     display: flex;
     gap: 50px;
 }
+
 .nav-link{
     font-size: var(--links);
     color: var(--colorprimario-mc);
     text-decoration: none;
+    padding: 4px;
 }
+nav .links{
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 4px;
+}
+.nav-link:hover{
+    border: 1px solid var(--colorprimario-mc);
+    border-radius: 8px;
+    padding: 4px;
+    transition: var(--transition);
+}
+
 .nav-item{
     color: var(--colorprimario-mc);
     text-decoration: none;
-}
 
+}
 /* Estilos generales del menú */
 .contacto .menu-contacto {
     width: 300px;
