--- a/style.css
+++ b/style.css
@@ -70,13 +70,13 @@ html {
     border: solid 1px var(--colorresaltar-mc);
     box-shadow: 1px 0.5px 5px var(--colorprimario-mc);
     border-radius: 8px;
-    width: 236px;
+    width: fit-content;
     height: 34px;
     display: flex;  
     align-items: center;
     justify-content: center;
     gap: 9px;
-
+    padding: 0 24px;
     .letra-boton{
     color:var(--colorresaltar-mc);
     font:var(--links);
@@ -92,12 +92,13 @@ html {
     border: solid 1px var(--colorresaltar-mc);
     border-radius: 8px;
     box-shadow: 1px 0.5px 15px var(--colorresaltar-mc);
-    width: 236px;
+    width: fit-content;
     height: 34px;
     display: flex;  
     align-items: center;
     justify-content: center;
     gap: 9px;
+    padding: 0 24px;
     .letra-boton{
         color:var(--colorprimario-mc);
         font:var(--links);
@@ -231,6 +232,139 @@ section{
     }
 }
 
+/* Formulario de contacto */ 
+.carta-formulario-contacto {
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 180px;
+    right: 32%;
+    background: var(--colorprimario-mc);
+    box-shadow: 1px 0.5px 5px var(--colorresaltar-mc);
+    width: 380px;
+    height: 320px;
+    border-color: 1px solid var(--colorprimario-mc);
+    border-radius: 8px;
+}
+
+.carta-formulario-contacto.show {
+    opacity: 1;                   /* Muestra el formulario */
+    transform: translateY(0);     /* Devuelve el formulario a su posición original */
+}
+
+.carta-formulario-contacto.hidden {
+    opacity: 0;                   /* Oculta el formulario */
+    transform: translateY(-50px); /* Desplazamiento fuera de la vista */
+}
+
+.arriba-carta{
+    display: flex;
+    align-items: center;
+    height:37px;
+    width: 100%;
+    background: var(--colorresaltar-mc);
+    border-radius: 8px;
+}
+.arriba-carta h5{
+    margin: 12px;
+    color: var(--colorprimario-mc);
+}
+.arriba-carta .icono{
+    position: absolute;
+    top: 2%;
+    right: 8%;
+}
+.informacion-formulario{
+    
+    background-color: var(--colorprimario-mc);
+    display: grid;
+    grid-template-columns:110px 220px;
+    column-gap: 16px;
+    align-items: center;
+    justify-items: start;
+    justify-content: center;
+    margin-top:12px 
+}
+.informacion-formulario img{
+    border: 2px solid var(--colorresaltar-mc);
+    border-radius: 60%;
+}
+.estructura-informacion{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+.texto-formulario:nth-child(1){
+    color:var(--colorsecundario-mc);
+    font-size: 16px;
+    font-weight: 600;
+}
+.texto-formulario:nth-child(2){
+    color: var(--colorresaltar-mc);
+    font-weight: 400;
+}
+.estructura-botones{
+    display: flex;
+    flex-direction: row;
+    margin-top: 12px;
+    gap: 12px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px; ;
+    width: 324px;
+    height: 250px;
+    margin-top: 12px;
+}
+form input{
+    width: 324px;
+    height: 36px;
+    background: var(--colorprimario-mc);
+    border: 1px solid var(--colorresaltar-mc);
+    border-radius: 8px;
+    padding-left: 12px;
+}
+form input::placeholder{
+    color: var(--colorsecundario-mc);
+    opacity: 80%;
+    font: var(--p);
+    font-weight: 500;
+    font-size: 12px;
+}
+form input:focus-visible{
+    color: var(--colorresaltar-mc);
+    outline:1px solid  var(--colorresaltar-mc);
+    background-color: #49210840;
+}
+form textarea{
+    width: 324px;
+    height: 60px;
+    background: var(--colorprimario-mc);
+    border: 1px solid var(--colorresaltar-mc);
+    border-radius: 8px;
+    padding-left: 12px;
+}
+form textarea::placeholder{
+    color: var(--colorsecundario-mc);
+    opacity: 80%;
+    font: var(--p);
+    font-weight: 500;
+    font-size: 12px;
+}
+form textarea:focus-visible{
+    color: var(--colorresaltar-mc);
+    outline:1px solid  var(--colorresaltar-mc);
+    background-color: #49210840;
+}
+form button{
+    font-size: 26px;
+    width: fit-content;
+}
 /* Header */
 header{
     top: 0;
@@ -240,7 +374,6 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 60px;
     margin: 0 auto;
 }
 @keyframes cambio-de-forma {
@@ -339,7 +472,7 @@ nav .links{
     border: solid 1px var(--colorprimario-mc);
     flex-direction: row;
     position: absolute;
-    top: 50;
+    top: 50px;
     right: 13%;
     padding: 10px;
     border-radius: 8px;
@@ -347,16 +480,24 @@ nav .links{
     animation: fadeInAnimation ease-in-out 0.3s forwards;
 }
 
-.hidden{
+.hidden {
     opacity: 0;
-    visibility: hidden;
-    animation: fadeInAnimation ease-in-out 0.3s forwards; 
+    display: none;
+    transition: opacity 0.3s ease-in-out;
 }
+
+.show {
+    opacity: 1;
+    visibility: visible;
+    display: flex;
+    transition: opacity 0.3s ease-in-out;
+}
+
 .contacto-header .menu-contacto-header {
     position: absolute;
-    top: 50;
+    top: 50px;
     right: 13%;
-    display: none; 
+    
 }
 .menu-contacto-header.show .nav-item{
     animation: fadeIntAnimation ease-in-out 0.3s forwards; 
